--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/monthly/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/report/order/monthly/list.html
@@ -22,7 +22,7 @@
 						<td>
 							<div class="input-area">
 								<select id="pYear" name="pYear" class="custom_ui">
-									<option th:each="year: ${#numbers.sequence(thisYear, thisYear-1)}" th:value="${year}" th:text="${year}" th:selected="${year}==${pYear}"></option>
+									<option th:each="year: ${#numbers.sequence(thisYear, 2012)}" th:value="${year}" th:text="${year}" th:selected="${year}==${pYear}"></option>
 								</select>
 							</div>
 						</td>
@@ -52,6 +52,7 @@
 			<tbody></tbody>
 		</table>
 	</div>
+	<div class="split-row-compact"></div>
 	<div id="AREA_chart" style="width:60%; margin: auto; "></div>
 	
 <script>
@@ -66,94 +67,103 @@ $(document).ready(function() {
 		
 		let thead = [];
 		let tbody = [];
+		let currency = "";
 		
-		thead.push("<tr><th></th>");
-		
-		$.each(column, function(index, item) {
-			thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
-			thead.push(item.CAPTION);
-			thead.push("</th>");
-		});
-		
-		thead.push("</tr>");
-		
-		$.each(axis, function(index1, item1) {
-			tbody.push("<tr>");
-			tbody.push("<td class='text-ellipsis' title='" + axis[index1].CAPTION + "'>" + axis[index1].CAPTION + "</td>");
+		if (JpUtilsObject.isNotNull(column))
+		{
+			thead.push("<tr><th></th>");
 			
-			$.each(data[index1], function(index2, item2) {
-				let value = item2.VALUE;
-
-				if (item2.MWKZ == "%")
-				{
-					value = Number(value).toFixed(2);
-				};
-				
-				let formattedValue = JpUtilsNumber.addComma(value);
-				
-				tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
-				tbody.push(formattedValue);
-				tbody.push("</td>");
+			$.each(column, function(index, item) {
+				thead.push("<th class='center text-ellipsis' title='" + item.CAPTION + "'>");
+				thead.push(item.CAPTION);
+				thead.push("</th>");
 			});
 			
-			tbody.push("</tr>");
-		});
+			thead.push("</tr>");
+			
+			$.each(axis, function(index1, item1) {
+				tbody.push("<tr>");
+				tbody.push("<td class='text-ellipsis' title='" + axis[index1].CAPTION + "'>" + axis[index1].CAPTION + "</td>");
+				
+				$.each(data[index1], function(index2, item2) {
+					let value = item2.VALUE;
 
-		$("table.order-report > thead").html(thead.join(""));
-		$("table.order-report > tbody").html(tbody.join(""));
+					if (item2.MWKZ == "%")
+					{
+						value = Number(value).toFixed(2);
+					};
+					
+					let formattedValue = JpUtilsNumber.addComma(value);
+					
+					tbody.push("<td class='right text-ellipsis' title='" + formattedValue + "'>");
+					tbody.push(formattedValue);
+					tbody.push("</td>");
+					
+					if (JpUtilsString.isEmpty(currency))
+					{
+						currency = item2.CURRENCY;
+					};
+				});
+				
+				tbody.push("</tr>");
+			});
+		}
+		else
+		{
+			thead.push("<tr><th class='center'>&nbsp;</th></tr>");
+			tbody.push("<tr><td class='center'>[[#{HQP_T_EMPTY_RESULT}]]</td></tr>");
+		};
+
+		$("table.order-report thead").html(thead.join(""));
+		$("table.order-report tbody").html(tbody.join(""));
 		
-		$("#curr").html(data[0][0].CURRENCY);
+		$("#curr").html(currency);
 	};
 	
 	function drawChart(result)
 	{
 		let column = result.BW_COLUMN;
-		let data = result.BW_DATA;
-		let axis = result.BW_AXIS;		
-		
 		let chartData = [];
 		let xAxis = [];
 		
-		$.each(column, function(index, item) {
-			if (index >=1 && index <= 12)
-			{
-				xAxis.push(item.CAPTION);	
-			};
-		});
-		
-		$.each(axis, function(index1, item1) {
+		if (JpUtilsObject.isNotNull(column))
+		{
+			let data = result.BW_DATA;
+			let axis = result.BW_AXIS;		
 			
-			if (index1 <= 1 || index1 == 3)
-			{
-				let chartColumn = [];
-				chartColumn.push(axis[index1].CAPTION);
+			$.each(column, function(index, item) {
+				if (index >=1 && index <= 12)
+				{
+					xAxis.push(item.CAPTION);	
+				};
+			});
+			
+			$.each(axis, function(index1, item1) {
 				
-				$.each(data[index1], function(index2, item2) {
-					if (index2 >= 1 && index2 <= 12)
-					{
-						let value = (item2.MWKZ == "%") ? Number(item2.VALUE).toFixed(2) : item2.VALUE;
-						
-						chartColumn.push(value);						
-					};
-				});
-				
-				chartData.push(chartColumn);				
-			};
-		});			
+				if (index1 <= 1 || index1 == 3)
+				{
+					let chartColumn = [];
+					chartColumn.push(axis[index1].CAPTION);
+					
+					$.each(data[index1], function(index2, item2) {
+						if (index2 >= 1 && index2 <= 12)
+						{
+							let value = (item2.MWKZ == "%") ? Number(item2.VALUE).toFixed(2) : item2.VALUE;
+							
+							chartColumn.push(value);						
+						};
+					});
+					
+					chartData.push(chartColumn);				
+				};
+			});			
+		};
 
 		let chart = c3.generate({
 			bindto: "#AREA_chart",
 			data: {
 				columns: chartData,
 				labels: false
-				/*
-				labels: {
-					format: {
-						Plan: d3.format(","),
-						"Sales Record": d3.format(",")
-					}
-				}
-				*/
 			},
 			axis: {
 				x: {
@@ -192,7 +202,8 @@ $(document).ready(function() {
 				drawTable(result);
 				drawChart(result);
 			},
-			complete(jqXHR, textStatus) {
+			complete: function(jqXHR, textStatus)
+			{
 				ProgressBar.hide();
 			}
 		});		
