uk 코드 적용 중

--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
@@ -125,15 +125,15 @@
 	    		scrollY: 100,
 	    		columns : [
 	    			//{data: "SEQ",	 		title: "Seq."			},
-	    			{data: "REF_ORD", 		title: "[[#{UKP_B_0041}]]"	},	// Reference No
-	    			{data: "MATERIAL", 		title: "[[#{UKP_B_0055}]]"	},	// Part No
-	    			{data: "QTY", 			title: "[[#{UKP_B_0056}]]"	},	// Qty	
-	    			{data: "TEXT", 			title: "[[#{UKP_B_0057}]]"	},	// Complaint
-	    			{data: "TEXT2", 		title: "[[#{UKP_B_0045}]]"	},	// Reason																										
-	    			{data: "COMPLAINT_DESC",title: "[[#{UKP_B_0058}]]"	},	// Text
-	    			{data: "RCOMMENT", 		title: "[[#{UKP_B_0059}]]"	},	// Reply
-	    			{data: "FILE_NAME", 	title: "[[#{UKP_B_0060}]]", className:'link'},	// File	
-	    			{data: "ZZDEALDT", 		title: "[[#{UKP_B_0061}]]"},			// Origin Doc. Date
+	    			{data: "REF_ORD", 		title: "[[#{UKP_L_0041}]]"	},	// Reference No
+	    			{data: "MATERIAL", 		title: "[[#{UKP_L_0055}]]"	},	// Part No
+	    			{data: "QTY", 			title: "[[#{UKP_L_0056}]]"	},	// Qty	
+	    			{data: "TEXT", 			title: "[[#{UKP_L_0057}]]"	},	// Complaint
+	    			{data: "TEXT2", 		title: "[[#{UKP_L_0045}]]"	},	// Reason																										
+	    			{data: "COMPLAINT_DESC",title: "[[#{UKP_L_0058}]]"	},	// Text
+	    			{data: "RCOMMENT", 		title: "[[#{UKP_L_0059}]]"	},	// Reply
+	    			{data: "FILE_NAME", 	title: "[[#{UKP_L_0060}]]", className:'link'},	// File	
+	    			{data: "ZZDEALDT", 		title: "[[#{UKP_L_0061}]]"},			// Origin Doc. Date
 	    			{data: "INT_NO", 		title: "INT_NO(Hidden)"},
 	    			{data: "DOCU_ITEM",		title: "DOCU_ITEM(Hidden)"}    			
 	    		],  	
