--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/parts_number_popup_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/parts_number_popup_list.html
@@ -9,7 +9,7 @@
 		<div class="block-title" th:text="#{UKP_T_0026}"></div><!-- Parts No. -->
 		<div class="block-button-area">
 			<button id="BTN_search" type="button" th:text="#{UKP_B_0012}"></button><!-- Search -->
-			<!-- button id="BTN_close" type="button" th:text="#{UKP_BTN_0005}"></button><!-- Close -->				
+			<!-- button id="BTN_close" type="button" th:text="#{UKP_B_0005}"></button><!-- Close -->				
 		</div>	
 	</div>	
 	<div class="condition-area">
