--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
@@ -5,10 +5,6 @@
 	layout:decorate="~{portal/layout/iv/uk/parts/common/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
-	<script type="application/javascript" th:src="@{/portal/js/dropzone/dropzone.min.js}"></script>
-	<link rel="stylesheet" type="text/css" class="ui" th:href="@{/portal/css/dropzone/dropzone.min.css}">
-
 	<!-- Modal for upload simulation -->	
 	<div class="dropzone-dimmer dimmer"></div>		
 	<div class="dropzone-area">
@@ -755,7 +751,11 @@
 				dataSrc: function(response)
 				{
 					let result = response.RESULT;
-	
+					if (result == null) {
+						ProgressBar.hide();	
+						return false;
+					} 
+					
 					$("#rdd").val(result.rdd);
 					
 					$("#credit").html(result.credit + result.creditCurrency);
