--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -788,6 +788,7 @@ $(function(){
 			{name: "uom", data: "uom", title: "[[#{HQP_L_UOM}]]"},//UoM
 			{name: "boQty", data: "boQty", title: "[[#{HQP_L_BACKORDER_QTY}]]"},//B/O Qty.
 			{name: "amDevPart", data: "amDevPart", title: "[[#{HQP_L_AM_DEV_PART}]]"},//AM Dev. No
+			{name: "netWeight", data: "netWeight", title: "[[#{HQP_L_NET_WEIGHT}]]"},//Net weight
 			{name: "netPrice", data: "netPrice", title: "[[#{HQP_L_NET_PRICE}]]"},//Net Price
 			{name: "netValue", data: "netValue", title: "[[#{HQP_L_NET_VALUE}]]"},//Net Value
 			{name: "availability", data: "availability", title: "[[#{HQP_L_AVAILABILITY}]]"},//Availability
