--- a/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/claim/display/list.html
@@ -87,12 +87,13 @@ $(function(){
 			{data: "T_NETWR", 		title: "[[#{HQP_L_TOTAL_AMOUNT}]]"},// Total Amount
 			{data: "WAERK", 		title: "[[#{HQP_L_CURR}]]"},// Curr.
 			{data: "RFGSK_TX_T", 	title: "[[#{HQP_L_PROCESS_RESULT}]]"},// Process Result						
-			{data: "RFGSK_TX_T1", 	title: "[[#{HQP_L_RETURN_RESULT}]]"},// Return Status			
-			{data: "VBELN3", 		title: "[[#{HQP_L_FINAL_DOC}]]"}// Final Document		
+			{data: "RFGSK_TX_T1", 	title: "[[#{HQP_L_RETURN_STATUS}]]"},// Return Status
+			{data: "ZFMBLNO", 		title: "[[#{HQP_L_MASTER_BL_NO}]]"},// Master B/L No.
+			{data: "VBELN3", 		title: "[[#{HQP_L_FINAL_DOC}]]"}// Final Document
 		],
 		columnDefs: [
 			{targets: [0, 4], className: "link dt-body-center"},
-			{targets: [1, 3, 6, 9], className: "dt-body-center"},
+			{targets: [1, 3, 6, 10], className: "dt-body-center"},
 			{targets: [5], className: "dt-body-right"}
 		],
 		ajax: {
