--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -795,8 +795,8 @@ $(function(){
 		],
 		columnDefs: [
 			{targets: [0], className: "skip-download dt-body-center"},
-			{targets: [1, 2, 5, 6, 7, 8, 12], className: "dt-body-center"},
-			{targets: [10, 11], className: "dt-body-right"}
+			{targets: [1, 2, 5, 6, 7, 8, 10, 13], className: "dt-body-center"},
+			{targets: [11, 12], className: "dt-body-right"}
 		],				
 		ajax: {
 			url: "[[${BASE_PATH}]]/order/create/simulation",
