EU 페이지 작업

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/info/parts_number_popup_list.html
@@ -90,7 +90,7 @@
 			],
 			ajax: {
 				url: "[[${BASE_PATH}]]/info/parts_number_popup_list/data",
-				type: "POST",
+				type: "GET",
 				data: function(p)
 				{				
 					p.pPartsNo = $("#pPartsNo").val();
