--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/transfer_order.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/transfer_order.html
@@ -5,8 +5,6 @@
 	layout:decorate="~{portal/layout/iv/eu/parts/popup/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
-	
 	<div class="block-header">
 		<div class="block-title" th:text="#{EUP_T_0062}"></div>
 		<div id="BTN_search" class="block-button-area">
@@ -30,9 +28,7 @@
 
 $(document).ready(function() {
 	ProgressBar.hide();	
-});
-
-$(function(){
+	
 	//주문유형 가져오기
 	var orderComponent = new OrderComponent();
 	orderComponent.makeOrderType($(".order-type"), "orderType", null, false, "docType=C");
@@ -43,7 +39,9 @@ $(function(){
 			opener.doTransferOrder(orderComponent.getSelectedOrderType());
 			window.close();
 		}
-		catch (e) {}
+		catch (e) {
+			console.log(e);
+		}
 	});
 });
 </script>	
