--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/quotation_detail.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/display/quotation_detail.html
@@ -5,8 +5,6 @@
 	layout:decorate="~{portal/layout/iv/eu/parts/common/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
-
 	<div class="block-header">
 		<div class="block-title" th:text="#{EUP_T_0048}"></div>
 		<div id="BTN_search" class="block-button-area">
@@ -70,7 +68,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<form id="FORM_search" name="FORM_search" action="[[${BASE_PATH}]]/order/display/quotation_list">
+	<form id="FORM_search" name="FORM_search" th:action="|${BASE_PATH}/order/display/quotation_list|">
 		<input type="hidden" name="pDocType" th:value="${pDocType}">
 		<input type="hidden" name="pOrderType" th:value="${pOrderType}">
 		<input type="hidden" name="pOrderNo" th:value="${pOrderNo}">
@@ -170,41 +168,41 @@ $(function(){
 	$("#BTN_transfer").on("click", function() {
 		Popup.open("[[${BASE_PATH}]]/order/create/transfer_order", 500, 200);
 	});	
-	
-	function doTransferOrder(orderType)
-	{
-		$.ajax({
-			url: "[[${BASE_PATH}]]/order/create/transfer_order/save",
-			method: "POST",
-			data: {"orderNo": "[[${orderNo}]]", "orderType": orderType},
-			beforeSend: function(jqXHR, settings)
-			{
-				ProgressBar.show();
-			},		
-		    success: function(response, textStatus, jqXHR) 
-		    {
-		    	var result = response.RESULT;
-		    	
-		    	if (result.TYPE == "S")
-		    	{
-		    		var orderNo = result.SALESDOCUMENT_EX;
-		    		var message = "[[#{EUP_M_0005}]]".replace("{0}", orderNo);
-		    		
-		    		alert(message);
-		    		
-		    		document.location.href = "[[${BASE_PATH}]]/order/display/order_detail?orderNo=" + orderNo;
-		    	}
-		    	else
-		    	{
-		    		alert(result.MESSAGE);
-		    	};
-		    },
-			complete: function(jqXHR, textStatus)
-			{
-				ProgressBar.hide();
-			}
-		});
-	};	
 });
+
+function doTransferOrder(orderType)
+{
+	$.ajax({
+		url: "[[${BASE_PATH}]]/order/create/transfer_order/save",
+		method: "POST",
+		data: {"orderNo": "[[${orderNo}]]", "orderType": orderType},
+		beforeSend: function(jqXHR, settings)
+		{
+			ProgressBar.show();
+		},		
+	    success: function(response, textStatus, jqXHR) 
+	    {
+	    	var result = response.RESULT;
+	    	
+	    	if (result.TYPE == "S")
+	    	{
+	    		var orderNo = result.SALESDOCUMENT_EX;
+	    		var message = "[[#{EUP_M_0005}]]".replace("{0}", orderNo);
+	    		
+	    		alert(message);
+	    		
+	    		document.location.href = "[[${BASE_PATH}]]/order/display/order_detail?orderNo=" + orderNo;
+	    	}
+	    	else
+	    	{
+	    		alert(result.MESSAGE);
+	    	};
+	    },
+		complete: function(jqXHR, textStatus)
+		{
+			ProgressBar.hide();
+		}
+	});
+}
 </script>	
 </th:block>
