--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/display/complaint_detail.html
@@ -44,7 +44,7 @@
 		<input type="hidden" id="docType" 		name="docType"		th:value="${docType}">	
 	</form>
 	
-	<form id="FORM_download" name="FORM_search" method="post">
+	<form id="FORM_download" name="FORM_search" method="get">
 		<input type="hidden" id="fileName" 		name="fileName">	
 		<input type="hidden" id="orderNo" 		name="orderNo">	
 		<input type="hidden" id="intNo" 		name="intNo">
@@ -132,7 +132,7 @@
 	    			{data: "TEXT2", 		title: "[[#{UKP_L_0045}]]"	},	// Reason																										
 	    			{data: "COMPLAINT_DESC",title: "[[#{UKP_L_0058}]]"	},	// Text
 	    			{data: "RCOMMENT", 		title: "[[#{UKP_L_0059}]]"	},	// Reply
-	    			{data: "FILE_NAME", 	title: "[[#{UKP_L_0060}]]", className:'link'},	// File	
+	    			{data: "FILE_NAME", 	title: "[[#{UKP_L_0060}]]", className:'link clickable'},	// File	
 	    			{data: "ZZDEALDT", 		title: "[[#{UKP_L_0061}]]"},			// Origin Doc. Date
 	    			{data: "INT_NO", 		title: "INT_NO(Hidden)"},
 	    			{data: "DOCU_ITEM",		title: "DOCU_ITEM(Hidden)"}    			
@@ -163,7 +163,7 @@
 		$("#FORM_search").attr("action", "[[${BASE_PATH}]]/complaint/display/complaint_list").submit();
 	});
 	
-	$('#TBL_grid tbody').on('click', 'tr', function (e){				
+	/* $('#TBL_grid tbody').on('click', 'tr', function (e){				
 	    let tblGrid = $('#TBL_grid').DataTable();	    
 	    let index = $('#TBL_grid').dataTable().api().cell($(e.target).closest('td')).index().column;	    	    
 		let rowData = tblGrid.row(this).data();
@@ -174,6 +174,29 @@
 		let docuItem = rowData.DOCU_ITEM;			
 	 		
 		if(index == 8)
+		{		
+			if (fileName != null)
+			{			
+				$("#fileName").val(fileName);
+				$("#orderNo").val(orderNo);		
+				$("#intNo").val(intNo);
+				$("#docuItem").val(docuItem);										
+				$("#FORM_download").attr("action", "[[${BASE_PATH}]]/complaint/display/file_download").submit();
+			}
+		}
+	}); */
+	
+	$("#TBL_grid").on("click", '.clickable',  function(e){
+		let tblGrid = $('#TBL_grid').DataTable();	    
+	    let index = $('#TBL_grid').dataTable().api().cell($(e.target).closest('td')).index().column;	    	    
+		let rowData = tblGrid.row(this).data();
+		
+		let orderNo = rowData.REF_ORD;	
+		let fileName = rowData.FILE_NAME;
+		let intNo = rowData.INT_NO;	
+		let docuItem = rowData.DOCU_ITEM;			
+	 		
+		if(index == 7)
 		{		
 			if (fileName != null)
 			{			
