어플리케이션보안점검 대응

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
@@ -538,6 +538,7 @@ input {
 .tooltip {
   position: relative;
   display: inline-block;
+  z-index: 999999;
   /*border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
