Application 보안점검 audit 대응

--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/order/create/order_form.html
@@ -983,14 +983,13 @@
 			}
 		});
 		
-		
 		// Datatable onload event
 		$("#TBL_grid").on("draw.dt", function () {
 			$("#fileName").val("");
 			$("#simulationFrom").val("");
 			
 			// Datatable grid 초기 설정 셋업
-			initGridTable($tableObj, true);
+			initGridTable($tableObj);
 	
 			ProgressBar.hide();
 		});
