--- a/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -772,8 +772,8 @@ $(function(){
 					return "<input type='text' name='materialNo' class='custom-ui' style='width: 150px;' value='" + row.materialNo + "' tabindex='" + tabIndex++ + "' " + row.disabled + " onchange='syncInput(this)'>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 				}
 			},
-			{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]", width: "150px"},//Supply Part No
-			{name: "description", data: "description", title: "[[#{HQP_L_DESCRIPTION}]]", width: "250px"},//Description
+			{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]"},//Supply Part No
+			{name: "description", data: "description", title: "[[#{HQP_L_DESCRIPTION}]]"},//Description
 			{
 				name: "orderQty",
 				data: "orderQty",
