--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
@@ -823,7 +823,7 @@
 			$("#simulationFrom").val("");
 			
 			// Datatable grid 초기 설정 셋업
-			initGridTable($tableObj, true);
+			initGridTable($tableObj);
 			
 			ProgressBar.hide();
 		});	
